[gd_scene load_steps=8 format=2]

[ext_resource path="res://Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://node.png" type="Texture" id=2]
[ext_resource path="res://nodep.png" type="Texture" id=3]
[ext_resource path="res://scripts/MAIN.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "RIGHT"

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 42
outline_size = 2
outline_color = Color( 0.960784, 0.129412, 0.129412, 1 )
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
show_behind_parent = true
margin_right = 1024.0
margin_bottom = 612.0
color = Color( 0.686275, 0.741176, 0.776471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 343.0
margin_bottom = 610.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RIGHT = SubResource( 1 )

[node name="BFS" type="Button" parent="."]
margin_left = 806.281
margin_top = 528.943
margin_right = 885.281
margin_bottom = 574.943
custom_fonts/font = SubResource( 2 )
text = "BFS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DFS" type="Button" parent="."]
margin_left = 912.07
margin_top = 528.943
margin_right = 992.07
margin_bottom = 574.943
custom_fonts/font = SubResource( 2 )
text = "DFS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text edit" type="TextEdit" parent="."]
margin_left = 28.5915
margin_top = 112.937
margin_right = 320.0
margin_bottom = 158.937
custom_fonts/font = SubResource( 2 )
text = "value"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create node" type="Button" parent="."]
margin_left = 28.5915
margin_top = 471.76
margin_right = 320.0
margin_bottom = 517.76
custom_fonts/font = SubResource( 2 )
text = "implement"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 28.5915
margin_top = 27.1619
margin_right = 310.592
margin_bottom = 79.1619
custom_fonts/font = SubResource( 3 )
text = "BFS SEARCH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scale_class" type="Node2D" parent="."]

[node name="node" type="TouchScreenButton" parent="scale_class"]
position = Vector2( 96, 218 )
scale = Vector2( 0.34, 0.34 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true

[connection signal="pressed" from="BFS" to="." method="_on_BFS_pressed"]
[connection signal="pressed" from="DFS" to="." method="_on_DFS_pressed"]
[connection signal="pressed" from="create node" to="." method="_on_create_node_pressed"]
[connection signal="pressed" from="scale_class/node" to="." method="_on_node_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
